--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "pinia": "^2.1.7",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@types/chai": "^4.2.15",
@@ -35,7 +38,7 @@
     "@vue/test-utils": "^2.0.0-0",
     "chai": "^4.2.0",
     "cypress": "^9.7.0",
-    "eslint": "^7.32.0",
+    "eslint": "^7.0.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
