--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "pinia": "^2.1.7",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vue-toastification": "^2.0.0-rc.5"
+    "vue-toastification": "^2.0.0-rc.5",
+    "vuetify": "^3.4.0-beta.1"
   },
   "devDependencies": {
     "@types/chai": "^4.2.15",
