--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "pinia": "^2.1.7",
+    "tippy.js": "^6.3.7",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vue-toastification": "^2.0.0-rc.5",
